<resources>
    <string name="app_name">Bao Trip</string>
    <string name="title_test"> Bienvenido </string>
    <string name="banner_image">BannerImage</string>
    <string name="login_text">Lo más popular</string>
    <string name="todo">generic description</string>
    <string name="element_text">Lorem</string>
    <string name="title_main_inspire">Inspirate</string>
    <string name="title_main_trip">Tipos de viaje</string>
    <string name="title_stat_trip">Lo más popular</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="navigation_home">Inicio</string>
    <string name="navigation_add">Añadir Viaje</string>
    <string name="navigation_list">Mis Viajes</string>
    <string name="navigation_questions">Preguntas frecuentes</string>
    <string name="navigation_log_out">Cerrar Sesión</string>
    <string name="navigation_edit">Editar Usuario</string>
    <string name="TRAVEL_ID">TRAVEL_ID</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="email">email</string>
    <string name="title_activity_elementos_list">ElementosListActivity</string>
    <string name="tab_text_1">Accesorios</string>
    <string name="tab_text_2">Ropa</string>
    <string name="tab_text_3">Aseo</string>
    <string name="tab_text_4">Salud</string>
    <string name="tab_text_5">A la mano</string>
    <string name="tab_text_6">Varios</string>
    <string name="edit_message">Agrega un elemento</string>
    <string name="button_send">Guardar</string>
</resources>