<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/navigation_home" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/add_icon"
            android:title="@string/navigation_add" />
        <item
            android:id="@+id/nav_travelist"
            android:icon="@drawable/travelist_icon"
            android:title="@string/navigation_list" />
        <item
            android:id="@+id/nav_questions"
            android:icon="@drawable/common_questions"
            android:title="@string/navigation_questions" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/log_out"
            android:title="@string/navigation_log_out" />
    </group>
</menu>